--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,29 @@
 /****ELEMENT****/
 body {
-  background-color: #0d7377;
+  background-color: #9dc6a7;
+  margin: 0;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 /****CLASS****/
+
+.top-container {
+  background-color: #d1f5d3;
+}
+
+.middle-container {
+  background-color: #e3dfc8;
+  height: 200px;
+  width: 200px;
+}
+
+.bottom-container {
+  background-color: #96bb7c;
+  height: 200px;
+  width: 200px;
+}
 
 /****ID****/
