--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@ h1 {
   background-color: #d1f5d3;
 }
 
+.dev {
+  text-decoration: underline;
+}
+
 .middle-container {
   background-color: #e3dfc8;
   height: 200px;
