--- a/styles/main.css
+++ b/styles/main.css
@@ -2,14 +2,23 @@
 
 body {
   background-color: #9dc6a7;
+  font-family: 'Roboto', sans-serif;
   margin-top: 0;
   text-align: center;
 }
 
 h1 {
+  font-family: 'Open Sans', sans-serif;
   margin-top: 10px;
 }
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+}
 /****CLASS****/
 
 .top-container {
